--- a/Новая папка (2)/тест — копия (2).html
+++ b/Новая папка (2)/тест — копия (2).html
@@ -1908,8 +1908,8 @@ let turnTimeout; // Тайм-аут для управления ходами
 let opponent; // Объявление глобальной переменной для хранения данных о противнике
 let totalDamage = 100; // Урон игрока
 let opponentDamage = 50; // Урон противника
-let opponentHealth = 800; // Здоровье противника
-let playerHealth = 800;
+let opponentHealth = 300; // Здоровье противника
+let playerHealth = 300;
 let currentPlayer = null;
 let battleInProgress = false; // Отслеживает состояние боя
 let playerRef;
@@ -1920,7 +1920,6 @@ let opponentListenerRef;
 let isFinalizingBattle = false; // Флаг для предотвращения повторных вызовов 
 let isListeningForOpponent = false; 
 let battlePromise = null; // Промис для блокировки listenForOpponent
-let registrationPromise = null; // Промис для блокировки регистрации
 
 // Открытие окна регистрации на PvP
 function openPvpRegistration() {
@@ -1934,48 +1933,42 @@ function closePvpRegistration() {
 
 // Регистрация на PvP
 async function registerForPvp() {
-  console.log("Попытка регистрации на PvP. Текущее здоровье: ", playerHealth);
+    console.log("Попытка регистрации на PvP. Текущее здоровье: ", playerHealth);
 
-  if (battleInProgress) {
-    console.log("Вы уже участвуете в бою!");
-    return;
-  }
+    if (battleInProgress) {
+        console.log("Вы уже участвуете в бою!");
+        return;
+    }
 
-  nickname = document.getElementById('nicknameInput').value;
+    nickname = document.getElementById('nicknameInput').value;
 
-  const inBattle = await isPlayerInBattle(nickname);
-  if (inBattle) {
-    console.log("Вы уже участвуете в бою!");
-    alert("Вы уже участвуете в бою!");
-    return;
-  }
+    const inBattle = await isPlayerInBattle(nickname);
+    if (inBattle) {
+        console.log("Вы уже участвуете в бою!");
+        alert("Вы уже участвуете в бою!");
+        return;
+    }
 
-  // Ждем завершения регистрации, если она заблокирована
-  console.log("Ожидание завершения регистрации...");
-  await Promise.resolve(registrationPromise);
-  console.log("Регистрация разблокирована.");
+    playerHealth = 300;
+    playerRef = ref(database, 'pvpQueue/' + nickname);
+    console.log(`Регистрация игрока ${nickname} с данными: здоровье ${playerHealth}, урон ${totalDamage}`);
 
-  playerHealth = 800;
-  playerRef = ref(database, 'pvpQueue/' + nickname);
-  console.log(`Регистрация игрока ${nickname} с данными: здоровье ${playerHealth}, урон ${totalDamage}`);
+    await set(playerRef, {
+        nickname: nickname,
+        health: playerHealth,
+        damage: totalDamage,
+        inBattle: false,
+        timestamp: Date.now()
+    });
 
-  await set(playerRef, {
-    nickname: nickname,
-    health: playerHealth,
-    damage: totalDamage,
-    inBattle: false,
-    timestamp: Date.now()
-  });
-
-  console.log(`${nickname} зарегистрирован на PvP с данными:`, {
-    nickname: nickname,
-    health: playerHealth,
-    damage: totalDamage,
-    timestamp: Date.now()
-  });
-
-  closePvpRegistration();
-  showWaitingForOpponent();
+    console.log(`${nickname} зарегистрирован на PvP с данными:`, {
+        nickname: nickname,
+        health: playerHealth,
+        damage: totalDamage,
+        timestamp: Date.now()
+    });
+    closePvpRegistration();
+    showWaitingForOpponent();
 }
 
 // Синхронизация очереди PvP
@@ -2003,15 +1996,6 @@ function listenForOpponent() {
             if (player1[1] && player2[1]) {
               console.log("Попытка начать PvP бой между игроками:", player1, player2);
 
-              // Прослушиваем событие сдачи оппонента
-              const opponentSurrenderRef = ref(database, `pvpQueue/${player2[1].nickname}/surrender`);
-              onValue(opponentSurrenderRef, (snapshot) => {
-                if (snapshot.exists() && snapshot.val() === true) {
-                  console.log("Оппонент сдался!");
-                  finalizePvpBattle('player', 'opponent_surrender');
-                }
-              });
-
               try {
                 const startBattleSuccess = await startPvpBattle(player2[1]);
                 if (startBattleSuccess) {
@@ -2034,7 +2018,7 @@ function listenForOpponent() {
 }
 
 // Остановка прослушивания очереди после завершения боя
-async function finalizePvpBattle(winner, reason = null) {
+async function finalizePvpBattle(winner) {
   if (isFinalizingBattle) {
     console.log("Битва уже завершается.");
     return;
@@ -2048,86 +2032,68 @@ async function finalizePvpBattle(winner, reason = null) {
     return;
   }
 
-  console.log(`Завершение битвы. Победитель: ${winner}, Причина: ${reason}`);
+  console.log(`Завершение битвы. Победитель: ${winner}`);
   battleInProgress = false;
 
   const opponentNickname = opponent ? opponent.nickname : null;
 
   try {
-    // Блокируем listenForOpponent до завершения транзакции
-    battlePromise = new Promise(resolve => {
-      runTransaction(ref(database, 'pvpQueue'), (queue) => {
-        if (!queue) {
-          console.warn("Очередь PvP пуста.");
-          return undefined;
-        }
+    await runTransaction(ref(database, 'pvpQueue'), (queue) => {
+      if (!queue) {
+        console.warn("Очередь PvP пуста.");
+        return undefined;
+      }
 
-        if (!queue[nickname] || (opponentNickname && !queue[opponentNickname])) {
-          console.warn("Один из игроков уже отсутствует в очереди.");
-          return undefined;
-        }
+      if (!queue[nickname] || (opponentNickname && !queue[opponentNickname])) {
+        console.warn("Один из игроков уже отсутствует в очереди.");
+        return undefined; 
+      }
 
-        // Сбрасываем флаги inBattle и обновляем здоровье
-        queue[nickname].inBattle = false;
-        queue[nickname].health = 800;
-        if (opponentNickname) {
-          queue[opponentNickname].inBattle = false;
-          queue[opponentNickname].health = 800;
-        }
+      // Сначала сбрасываем флаги inBattle и обновляем здоровье
+      queue[nickname].inBattle = false;
+      queue[nickname].health = 300;
+      if (opponentNickname) {
+        queue[opponentNickname].inBattle = false;
+        queue[opponentNickname].health = 300;
+      }
 
-        // Удаляем игроков из очереди
-        delete queue[nickname];
-        if (opponentNickname) {
-          delete queue[opponentNickname];
-        }
+      // Затем удаляем игроков из очереди
+      delete queue[nickname];
+      if (opponentNickname) {
+        delete queue[opponentNickname];
+      }
 
-        return queue;
-      })
-      .then(() => {
-        console.log(`Игроки ${nickname} и ${opponentNickname} удалены из очереди.`);
-        resetBattleState();
-        resolve(); // Разрешаем промис после успешного завершения
-      })
-      .catch(error => {
-        console.error('Ошибка при выполнении транзакции:', error);
-        resolve(); // Разрешаем промис, даже если произошла ошибка
-      });
+      return queue;
+    })
+    .then(() => { 
+      console.log(`Игроки ${nickname} и ${opponentNickname} удалены из очереди.`);
+      resetBattleState();
+      battlePromise = null; // Разблокировка listenForOpponent
+    })
+    .catch(error => {
+      console.error('Ошибка при выполнении транзакции:', error);
+      battlePromise = null; 
     });
 
-    // Дожидаемся завершения транзакции
-    await battlePromise;
-
-    // Обновляем UI (теперь всегда выполнится)
+    // Обновляем UI
     if (winner === 'player') {
-      if (reason === 'opponent_surrender') {
-        document.getElementById('pvpFightLog').innerHTML += '<span style="color: green;">Противник сдался! Вы победили!</span><br>';
-      } else {
-        document.getElementById('pvpFightLog').innerHTML += '<span style="color: green;">Вы победили!</span><br>';
-      }
+      document.getElementById('pvpFightLog').innerHTML += '<span style="color: green;">Вы победили!</span><br>';
     } else if (winner === 'opponent') {
-      if (reason === 'player_surrender') {
-        document.getElementById('pvpFightLog').innerHTML += '<span style="color: red;">Вы сдались! Вы проиграли!</span><br>';
-      } else {
-        document.getElementById('pvpFightLog').innerHTML += '<span style="color: red;">Вы проиграли!</span><br>';
-      }
+      document.getElementById('pvpFightLog').innerHTML += '<span style="color: red;">Вы проиграли!</span><br>';
     }
-// Добавляем задержку перед скрытием pvpBattle
-setTimeout(() => {
-      document.getElementById('pvpBattle').style.display = 'none';
-      const waitingMessage = document.getElementById('waitingMessage');
-      if (waitingMessage) {
-        document.body.removeChild(waitingMessage);
-      }
-    }, 3000); // 3 секунды задержки
+
+    document.getElementById('pvpBattle').style.display = 'none';
+    const waitingMessage = document.getElementById('waitingMessage');
+    if (waitingMessage) {
+      document.body.removeChild(waitingMessage);
+    }
 
     console.log("Данные о завершении боя успешно обновлены.");
-  
 
   } catch (error) {
     console.error('Ошибка при завершении боя:', error);
   } finally {
     isFinalizingBattle = false;
-    battlePromise = null; // Разблокируем listenForOpponent
   }
 }
 
@@ -2164,6 +2130,7 @@ async function startPvpBattle(opponentData) {
       }
     });
 
+    // Создаем промис battlePromise 
     battlePromise = new Promise(resolve => {
       stopListeningForOpponent();
 
@@ -2175,11 +2142,12 @@ async function startPvpBattle(opponentData) {
       currentPlayer = (Math.random() > 0.5) ? 'player' : 'opponent';
       console.log("Начало битвы. Текущий игрок:", currentPlayer);
 
+      // Обновляем UI 
       document.getElementById('pvpOpponentInfo').innerText = `Противник: ${opponent.nickname}\nЗдоровье: ${opponent.health}\nУрон: ${opponent.damage}`;
       document.getElementById('pvpFightLog').innerHTML = '';
       document.getElementById('pvpBattle').style.display = 'block';
 
-      // Устанавливаем battleInProgress = true ПОСЛЕ создания данных
+      // Устанавливаем battleInProgress = true ПОСЛЕ создания данных для боя
       battleInProgress = true;
 
       // Запускаем первый ход 
@@ -2189,16 +2157,13 @@ async function startPvpBattle(opponentData) {
         opponentTurn();
       }
 
-      // Блокируем регистрацию во время боя
-      registrationPromise = battlePromise; 
-
-      resolve();
+      resolve(); // Разрешаем промис
     });
 
-    return true;
+    return true; // Бой успешно начат
   } catch (error) {
     console.error("Ошибка при обновлении флагов inBattle:", error);
-    return false;
+    return false; // Ошибка при запуске боя
   }
 }
 
@@ -2238,18 +2203,13 @@ function showWaitingForOpponent() {
 
 // Завершение PvP боя в ручную по нажатию кнопки завершить бой
 function endPvpBattle() {
-  if (!battleInProgress) {
-    console.log("Битва уже завершена.");
-    return;
-  }
+    if (!battleInProgress) {
+        console.log("Битва уже завершена.");
+        return;
+    }
 
-  console.log("Завершение битвы вручную.");
-
-  // Отправляем сообщение о сдаче в базу данных
-  set(ref(database, `pvpQueue/${nickname}/surrender`), true);
-
-  // Завершаем бой на стороне игрока
-  finalizePvpBattle('opponent', 'player_surrender'); 
+    console.log("Завершение битвы вручную.");
+    finalizePvpBattle(currentPlayer);
 }
 
 function resetBattleState() {
@@ -2257,8 +2217,8 @@ function resetBattleState() {
     playerRef = null;
     opponentRef = null;
     opponent = null;
-    playerHealth = 800;
-    opponentHealth = 800;
+    playerHealth = 300;
+    opponentHealth = 300;
     battleInProgress = false;
 
     console.log("Состояние после сброса. Игрок здоровье: ", playerHealth, " Оппонент здоровье: ", opponentHealth);
@@ -2400,17 +2360,17 @@ async function isPlayerInBattle(playerNickname) {
         
         // window.isPlayerInBattle = isPlayerInBattle;
             // window.listenForOpponent = listenForOpponent;
-//         function clearQueue() {
-//     const queueRef = ref(database, 'pvpQueue');
-//     set(queueRef, null)
-//     .then(() => {
-//         console.log('Очередь очищена.');
-//     })
-//     .catch((error) => {
-//         console.error('Ошибка при очистке очереди:', error);
-//     });
-// }
-// window.clearQueue = clearQueue;
+        function clearQueue() {
+    const queueRef = ref(database, 'pvpQueue');
+    set(queueRef, null)
+    .then(() => {
+        console.log('Очередь очищена.');
+    })
+    .catch((error) => {
+        console.error('Ошибка при очистке очереди:', error);
+    });
+}
+window.clearQueue = clearQueue;
 
 
 
@@ -3013,7 +2973,6 @@ function changeScreen(screen) {
         document.getElementById('statusBar').style.display = 'block';
         //updateStatusBar();
     } else if (screen === 'arena') {
-        //document.getElementById('statusBar').style.display = 'block';
         drawArena();
         document.getElementById('pvpButton').style.display = 'block'; // Показываем кнопку на экране арены
         arena();
@@ -3264,11 +3223,11 @@ window.updateStatusBar = updateStatusBar;
     startUpdating(); // Запуск обновления при старте игры
     startHourlyReset(); // Запуск таймера для сброса здоровья босса
     updateMonsterHealthDisplay();
-    //clearQueue(); // Очистка очереди перед регистрацией
+    clearQueue(); // Очистка очереди перед регистрацией
     
 }
 
-// function clearrQueue() {
+// function clearQueue() {
 //     const queueRef = ref(database, 'pvpQueue');
 //     set(queueRef, null)
 //     .then(() => {
