ежедневные задание и мобайл версия3

--- a/index.html
+++ b/index.html
@@ -744,6 +744,7 @@ button.upgrade-button:hover, button.hire-button:hover {
             width: 100%;
             height: auto;
             font-size: 14px;
+            display: none;
         }
 
         .status-bar {
@@ -800,6 +801,7 @@ button.upgrade-button:hover, button.hire-button:hover {
             width: 100%;
             height: auto;
             font-size: 14px;
+            display: none;
         }
 
         .status-bar {
