--- a/index.html
+++ b/index.html
@@ -727,7 +727,23 @@ button.upgrade-button:hover, button.hire-button:hover {
         height: auto;
         font-size: 14px;
     }
-
+    #leftCharacterMenu {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        background: rgba(0, 0, 0, 0.8);
+        color: white;
+        padding: 10px;
+        border-radius: 5px;
+        display: block;
+        font-size: 16px;
+        text-align: center;
+        max-width: calc(100vw - 20px);
+        max-height: calc(100vh - 20px);
+        overflow: auto;
+        display: none; /* Скрываем по умолчанию */
+        width: 30%;
+    }
     #characterMenu {
         right: 0;
         top: 0;
