ежедневные задание и мобайл версия3

--- a/index.html
+++ b/index.html
@@ -739,10 +739,10 @@ button.upgrade-button:hover, button.hire-button:hover {
         font-size: 16px;
         text-align: center;
         max-width: calc(100vw - 20px);
-        max-height: calc(100vh - 20px);
+        /* max-height: calc(100vh - 20px); */
         overflow: auto;
         display: none; /* Скрываем по умолчанию */
-        transform: scale(0.3); /* Уменьшить масштаб до 30% */
+        transform: scale(0.6); /* Уменьшить масштаб до 30% */
         transform-origin: top left; /* Указать точку начала масштабирования */
     }
     #characterMenu {
