ежедневные задание и мобайл версия3

--- a/index.html
+++ b/index.html
@@ -758,12 +758,12 @@ button.upgrade-button:hover, button.hire-button:hover {
         width: 100%;
         height: auto;
         font-size: 14px;
-        transform: scale(0.7); /* Уменьшить масштаб до 30% */
+        transform: scale(0.4); /* Уменьшить масштаб до 30% */
         transform-origin: top right; /* Указать точку начала масштабирования */
     }
 
     .status-bar {
-        left: 100px;
+        left: 30%;
         top: 80px;
         right: 0;
         width: 20%;
@@ -792,8 +792,10 @@ button.upgrade-button:hover, button.hire-button:hover {
     }
 
     #chatContainer {
-        width: 50%;
-        left: 5%;
+        width: 100%;
+        left: 15%;
+        top: 80%;
+        max-height: 10vh; /* Максимальная высота 100% высоты экрана */
     }
 
     #shopMenu {
