--- a/index.html
+++ b/index.html
@@ -769,7 +769,22 @@ button.upgrade-button:hover, button.hire-button:hover {
         width: 20%;
         font-size: 14px;
     }
-
+    #dailyQuestsMenu {
+    display: none;
+    position:  fixed;
+    top: 50%;
+    left: 50%; 
+    transform:  translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.8); 
+    color: white; 
+    padding:  20px;
+    border-radius: 5px;
+    z-index: 1001;
+    text-align:  center; 
+    font-size:  16px;  /*  Уменьшаем размер шрифта  */ 
+    transform: scale(0.5); /* Уменьшить масштаб до 30% */
+        transform-origin: top right; /* Указать точку начала масштабирования */
+}
     /* Дополнительные изменения для мобильной версии */
     .crosshair {
         width: 40px;
