ежедневные задание и мобайл версия3

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@ button.upgrade-button:hover, button.hire-button:hover {
         width: 100%;
         height: auto;
         font-size: 14px;
-        transform: scale(0.4); /* Уменьшить масштаб до 30% */
+        transform: scale(0.35); /* Уменьшить масштаб до 30% */
         transform-origin: top right; /* Указать точку начала масштабирования */
     }
 
@@ -808,9 +808,9 @@ button.upgrade-button:hover, button.hire-button:hover {
 
     #chatContainer {
         width: 100%;
-        left: 15%;
-        top: 80%;
-        max-height: 10vh; /* Максимальная высота 100% высоты экрана */
+        left: 0;
+        top: 70%;
+        max-height: 30vh; /* Максимальная высота 100% высоты экрана */
     }
 
     #shopMenu {
