ежедневные задание и мобайл версия3

--- a/index.html
+++ b/index.html
@@ -812,7 +812,10 @@ button.upgrade-button:hover, button.hire-button:hover {
         top: 70%;
         max-height: 30vh; /* Максимальная высота 100% высоты экрана */
     }
-
+    #chatMessages {
+    flex-grow: 1;
+    overflow-y: auto;
+    }
     #shopMenu {
         width: 90%;
         left: 5%;
